# workshop-ollama-finetuning

./: CLAUDE.md  CONTRIBUTORS.md  README.md  pyproject.toml
config/: data_schema.yaml  training_config.yaml
notebooks/: 01_setup_environment.ipynb  02_data_exploration.ipynb  03_finetuning.ipynb  04_evaluation.ipynb
scripts/: finetune_llama.py  prepare_data.py  serve_model.py
src/: data_loader.py  evaluator.py  ollama_export.py  trainer.py
